@@ -1,3 +1,7 @@
+2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/slackware.html (Module): remove.
+
 2005-05-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site: Add missing translation headers.
